# shutdown-menu

./: .gitignore  CMakeLists.txt  README.md  stylesheet.css
cmake/: shutdown-menu-keybind.py.in  shutdown-menu.gschema.xml.in
src/: CMakeLists.txt  application.c  application.h  dialog.c  dialog.h  main.c
tools/cmake/: cmake_uninstall.cmake.in
